name:                hoglmv
version:             0.1.0.0
homepage:            https://github.com/noodles623/hoglmv
license:             BSD3
license-file:        LICENSE
author:              David Needles
maintainer:          dpn28@cornell.edu
copyright:           2021 David Needles
category:            Software
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hoglmv
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Input
                     , Common
                     , ObjLoad
                     , Mesh
  build-depends:       base >= 4.7 && < 5
                     , OpenGL
                     , OpenGLRaw
                     , sdl2
                     , vinyl
                     , vinyl-gl
                     , GLUtil
                     , linear
                     , filepath
                     , lens
                     , text
                     , if
                     , split
                     , array